# logger

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/doxygen/: Doxyfile
examples/: CMakeLists.txt  main.cc  main.cpp
include/ert/: Logger.hpp
include/ert/tracing/: Logger.hpp
src/: CMakeLists.txt  Logger.cc  Logger.cpp  Logger.hh
